; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/utilities/extr_utresrc.c_AcpiUtGetResourceType.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/utilities/extr_utresrc.c_AcpiUtGetResourceType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_RESOURCE_NAME_LARGE = common dso_local global i32 0, align 4
@ACPI_RESOURCE_NAME_SMALL_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiUtGetResourceType(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = call i32 (...) @ACPI_FUNCTION_ENTRY()
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @ACPI_GET8(i8* %5)
  %7 = load i32, i32* @ACPI_RESOURCE_NAME_LARGE, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @ACPI_GET8(i8* %11)
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @ACPI_GET8(i8* %14)
  %16 = load i32, i32* @ACPI_RESOURCE_NAME_SMALL_MASK, align 4
  %17 = and i32 %15, %16
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %13, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ACPI_FUNCTION_ENTRY(...) #1

declare dso_local i32 @ACPI_GET8(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
